[tool.poetry]
name = "20230215-sketch-crawler"
version = "0.1.0"
description = ""
authors = ["utgwkk <utagawakiki@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "20230215_sketch_crawler"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
